crucible progress bar